--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ pandas==2.2.3
 openpyxl==3.1.5
 pyyaml==6.0.2
 torch==2.5.1
+llama-cpp-python==0.2.77
 
-# CMAKE_ARGS="-DGGML_CUDA=on" pip install llama-cpp-python==0.2.77
+# IF GPU IS AVAILABLE, RUN THIS COMMAND
+# pip uninstall -y llama-cpp-python && CMAKE_ARGS="-DGGML_CUDA=on" pip install llama-cpp-python==0.2.77
