--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ torch==2.5.1
 pyfiglet==1.0.2
 pickle==0.0.11
 scikit-learn==1.5.2
+flask==3.1.0
 
 # ONLY IF YOU ARE GOING TO USE 'dataset_completion_automatic.py'
 # llama-cpp-python==0.2.77
